Scanning networks, setting Wi-Fi PSK, connecting (problems with DHCP), keeping config after reboot (wpa_supplicant.conf)